[package]
name = "vxlan-feth"
version = "0.1.0"
edition = "2024"

[dependencies]
feth-rs = { git = "https://github.com/realityone/feth-rs", features = [
    "tokio",
] }
tokio = { version = "1", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Unavoidable in FFI / ioctl code
ptr_as_ptr = "allow"
borrow_as_ptr = "allow"
ref_as_ptr = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_ptr_alignment = "allow"
# Common pedantic false positives
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
